added check acccess
Check access for sales order

--- a/angular-app/src/app/sales/sales-transactions/sales-sales-order/sales-sales-order.component.html
+++ b/angular-app/src/app/sales/sales-transactions/sales-sales-order/sales-sales-order.component.html
@@ -25,7 +25,7 @@
     </div>
     <!-- header section ends -->
 
-    <div class="content-body">
+    <div class="content-body" *ngIf="menuAccess">
       <p-card>
         <p-toast position="bottom-center" key="t1"></p-toast>
         <p-confirmDialog
